[package]
name = "lunatic-runtime"
version = "0.12.0"
authors = ["Bernard Kolobara <bernard@lunatic.solutions>"]
edition = "2018"
description = "An actor platform built on WebAssembly"
homepage = "https://lunatic.solutions"
repository = "https://github.com/lunatic-solutions/lunatic"
categories = ["wasm"]
license = "Apache-2.0/MIT"
readme = "README.md"

[lib]
name = "lunatic_runtime"
path = "src/lib.rs"

[[bin]]
name = "lunatic"
path = "src/main.rs"

[features]
default = ["distributed-quinn", "metrics"]
distributed-tcp = ["lunatic-distributed/tcp"]
distributed-s2n = ["lunatic-distributed/quic-s2n"]
distributed-quinn = ["lunatic-distributed/quic-quinn"]
metrics = [
    "dep:metrics",
    "lunatic-timer-api/metrics",
    "lunatic-registry-api/metrics",
    "lunatic-process-api/metrics",
    "lunatic-process/metrics",
]
prometheus = ["dep:metrics-exporter-prometheus", "metrics"]


[dependencies]
anyhow = "1.0"
bincode = "1.3"
clap = { version = "4.0", features = ["cargo", "derive"] }
dashmap = "5.3.4"
env_logger = "0.9"
hash-map-id = { version = "0.12", path = "crates/hash-map-id" }
lazy_static = "1.4"
log = "0.4"
lunatic-common-api = { version = "0.12", path = "crates/lunatic-common-api" }
lunatic-distributed = { version = "0.12", path = "crates/lunatic-distributed" }
lunatic-distributed-api = { version = "0.12", path = "crates/lunatic-distributed-api" }
lunatic-error-api = { version = "0.12", path = "crates/lunatic-error-api" }
lunatic-messaging-api = { version = "0.12", path = "crates/lunatic-messaging-api" }
lunatic-networking-api = { version = "0.12", path = "crates/lunatic-networking-api" }
lunatic-process = { version = "0.12", path = "crates/lunatic-process" }
lunatic-process-api = { version = "0.12", path = "crates/lunatic-process-api" }
lunatic-registry-api = { version = "0.12", path = "crates/lunatic-registry-api" }
lunatic-stdout-capture = { version = "0.12", path = "crates/lunatic-stdout-capture" }
lunatic-thalo-api = { version = "0.12", path = "crates/lunatic-thalo-api" }
lunatic-timer-api = { version = "0.12", path = "crates/lunatic-timer-api" }
lunatic-version-api = { version = "0.12", path = "crates/lunatic-version-api" }
lunatic-wasi-api = { version = "0.12", path = "crates/lunatic-wasi-api" }
metrics = { version = "0.20.1", optional = true }
metrics-exporter-prometheus = { version = "0.11.0", optional = true }
regex = "1.5"
serde = "1.0"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres"] }
tokio = { version = "1.20", features = [
    "macros",
    "rt-multi-thread",
    "net",
    "time",
] }
uuid = { version = "1.1", features = ["v4"] }
wasi-common = { git = "https://github.com/bytecodealliance/wasmtime" }
wasmparser = { git = "https://github.com/bytecodealliance/wasm-tools" }
wasmtime = { git = "https://github.com/bytecodealliance/wasmtime", features = [
    "component-model",
] }
wasmtime-wasi = { git = "https://github.com/bytecodealliance/wasmtime" }

[dev-dependencies]
wat = "1.0"
tokio = { version = "1.20", features = ["rt-multi-thread"] }
criterion = { version = "0.4", features = ["async_tokio"] }

[[bench]]
name = "benchmark"
harness = false

[workspace]
members = [
    "crates/hash-map-id",
    "crates/lunatic-stdout-capture",
    "crates/lunatic-process",
    "crates/lunatic-distributed",
    "crates/lunatic-common-api",
    "crates/lunatic-process-api",
    "crates/lunatic-error-api",
    "crates/lunatic-messaging-api",
    "crates/lunatic-timer-api",
    "crates/lunatic-version-api",
    "crates/lunatic-wasi-api",
    "crates/lunatic-registry-api",
    "crates/lunatic-distributed-api",
    "crates/lunatic-thalo-api",
]
