[package]
name = "lunatic-thalo-api"
version = "0.10.0"
edition = "2021"
description = "Thalo extensions for Lunatic"
homepage = "https://lunatic.solutions"
repository = "https://github.com/lunatic-solutions/lunatic/tree/main/crates/lunatic-common-api"
license = "Apache-2.0/MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0"
bincode = "1.3"
derive_more = "0.99"
hash-map-id = { version = "^0.10", path = "../hash-map-id" }
lunatic-common-api = { version = "^0.10", path = "../lunatic-common-api" }
lunatic-process = { version = "^0.10", path = "../lunatic-process" }
lunatic-process-api = { version = "^0.10", path = "../lunatic-process-api" }
once_cell = "1.16"
regex = "1.7.0"
semver = { version = "1.0.14", features = ["serde"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
sqlx = { version = "0.6.2", features = [
  "runtime-tokio-rustls",
  "postgres",
  "macros",
] }
tokio = { version = "1.21.2", features = ["sync"] }
wasmtime = { git = "https://github.com/bytecodealliance/wasmtime", features = [
  "component-model",
] }
wasmtime-wasi = { git = "https://github.com/bytecodealliance/wasmtime" }
wit-bindgen-host-wasmtime-rust = { git = "https://github.com/bytecodealliance/wit-bindgen" } # managed by root Cargo.toml
