[package]
name = "lunatic-thalo-api"
version = "0.12.0"
edition = "2021"
description = "Thalo extensions for Lunatic"
homepage = "https://lunatic.solutions"
repository = "https://github.com/lunatic-solutions/lunatic/tree/main/crates/lunatic-common-api"
license = "Apache-2.0/MIT"

[dependencies]
hash-map-id = { workspace = true }
lunatic-common-api = { workspace = true }
lunatic-process = { workspace = true }
lunatic-process-api = { workspace = true }

anyhow = { workspace = true }
bincode = "1.3"
derive_more = "0.99"
once_cell = "1.16"
regex = "1.7.0"
semver = { version = "1.0.14", features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
sqlx = { workspace = true, features = [
  "runtime-tokio-rustls",
  "postgres",
  "macros",
] }
tokio = { workspace = true, features = ["sync"] }
wasmtime = { workspace = true, features = ["component-model"] }
wit-bindgen-host-wasmtime-rust = { git = "https://github.com/bytecodealliance/wit-bindgen" }
